# privadex

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
dex_aggregator/chain_metadata/: Cargo.toml  README.md
dex_aggregator/chain_metadata/src/: bridge.rs  chain_info.rs  common.rs  lib.rs
dex_aggregator/chain_metadata/src/registry/: bridge.rs  chain.rs  dex.rs  mod.rs  token.rs
dex_aggregator/chain_metadata/src/utils/: general_utils.rs  mod.rs  ss58_utils.rs
dex_aggregator/common/: Cargo.toml  README.md
dex_aggregator/common/src/: fixed_point.rs  lib.rs  signature_scheme.rs  uuid.rs
dex_aggregator/common/src/utils/: dynamodb_api.rs  general_utils.rs  http_request.rs  mod.rs  s3_api.rs  ss58_utils.rs
dex_aggregator/execution_plan/: Cargo.toml  README.md
dex_aggregator/execution_plan/examples/: compute_execution_plan.rs
dex_aggregator/execution_plan/src/: execution_plan.rs  lib.rs  validator.rs
dex_aggregator/execution_plan/src/graph_solution_to_execution_plan/: common.rs  converter.rs  helper_process_graph_edge.rs  helper_to_single_exec_step.rs  mod.rs
dex_aggregator/execution_plan/src/test_utilities/: graph_solution_factory.rs  mod.rs
dex_aggregator/executor/: Cargo.toml  README.md
dex_aggregator/executor/examples/: e2e_execute_plan_mainnets.rs  execute_static_plan_mainnets.rs  execute_static_plan_moonbase_alpha.rs  send_xtokens_extrinsic.rs
dex_aggregator/executor/src/: extrinsic_call_factory.rs  key_container.rs  lib.rs
dex_aggregator/executor/src/concurrency_coordinator/: README.md  deserialize_helper.rs  dynamodb_request_factory.rs  execution_plan_assigner.rs  mod.rs  nonce_manager.rs  prestart_step_uniqueness_enforcer.rs
dex_aggregator/executor/src/eth_utils/: astar_xcm_precompile_contract.rs  common.rs  dex_router_contract.rs  erc20_contract.rs  mod.rs  parse_txn_helper.rs  weth_contract.rs
dex_aggregator/executor/src/eth_utils/eth_abi/: astar_xcm_abi.json  erc20_abi.json  weth_abi.json
dex_aggregator/executor/src/executable/: executable_path.rs  executable_plan.rs  executable_step.rs  execute_step_meta.rs  mod.rs  traits.rs
dex_aggregator/executor/src/executable/executable_step_helpers/: executable_eth_steps.rs  executable_xcm_transfer.rs  mod.rs
dex_aggregator/executor/src/substrate_utils/: common.rs  extrinsic_sig_config.rs  mod.rs  node_rpc_utils.rs
dex_aggregator/executor/src/substrate_utils/indexer_utils/: graphql_helper.rs  mod.rs  subsquid_utils.rs  xcm_transfer_lookup.rs
dex_aggregator/routing/: Cargo.toml  README.md  example.dot
dex_aggregator/routing/examples/: build_visualize_graph.rs
dex_aggregator/routing/src/: example.dot  graph_builder.rs  graphql_client.rs  lib.rs
dex_aggregator/routing/src/graph/: edge.rs  graph.rs  mod.rs  traits.rs
dex_aggregator/routing/src/smart_order_router/: mod.rs  single_path_sor.rs
dex_aggregator/routing/src/smart_order_router/helper_graph_algos/: find_all_paths.rs  mod.rs
dex_aggregator/routing/src/test_utilities/: graph_factory.rs  mod.rs
dex_aggregator/routing/src/test_utilities/graph_factory_output/: medium_graph.dot  small_graph.dot
dex_aggregator/routing/tests/: static_graph.rs
dex_indexer/: .env  .eslintrc  .gitignore  .prettierrc.json  Dockerfile  FAQ.md  Makefile  README.md  package-lock.json  package.json  schema.graphql  tsconfig.json
dex_indexer/abi/: SwapFlashLoan.json  factory.json  pair.json
dex_indexer/assets/: pools_arthswap.json  pools_beamswap.json  pools_stellaswap.json
dex_indexer/src/: consts.ts  dex_consts.ts  pairsProcessor.ts  processor.ts
dex_indexer/src/dex_config/: arthswap.ts  beamswap.ts  stellaswap.ts
dex_indexer/src/entities/: entityUtils.ts  pair.ts  swap.ts  token.ts
dex_indexer/src/mappers/: baseMapper.ts  factory.ts  pairs.ts  swapFlashLoan.ts
dex_indexer/src/model/: index.ts
dex_indexer/src/model/custom/: index.ts  swapStat.ts  swapper.ts
dex_indexer/src/server-extension/resolvers/: index.ts
dex_indexer/src/types/abi/: erc20.ts  erc20NameBytes.ts  erc20SymbolBytes.ts  factory.ts  pair.ts  swapFlashLoan.ts
dex_indexer/src/utils/: helpers.ts  pricing.ts
dex_indexer/typegen/: typegen.json
dex_indexer/typegen/src/types/: events.ts  v49.ts
privadex/chain_metadata/: Cargo.toml  README.md
privadex/chain_metadata/src/: bridge_info.rs.deprecated  chain_info.rs  common.rs  lib.rs
privadex/chain_metadata/src/registry/: bridge.rs.deprecated  chain.rs  dex.rs  mod.rs  token.rs
privadex/chain_metadata/src/utils/: general_utils.rs  mod.rs  ss58_utils.rs
privadex/executor/: Cargo.toml  README.md
privadex/executor/src/: lib.rs  s3_api.rs  ss58_utils.rs
privadex/route_execution_connector/: Cargo.toml  README.md
privadex/routing/: Cargo.toml  README.md  generated_graph.dot
privadex/routing/src/: graph_builder.rs  lib.rs
privadex/routing/src/graph/: traits.rs
privadex/routing/src/smart_order_router/: mod.rs
utils/: Cargo.toml  graph_find_all_paths.py  graphql_client.py  pre-commit
utils/environmental/: Cargo.toml
utils/environmental/src/: lib.rs
