[package]
name = "privadex_chain_metadata"
version = "0.1.0"
authors = ["Kap"]
edition = "2021"

[profile.release.package.compiler_builtins]
# The compiler-builtins crate cannot reference libcore, and it's own CI will
# verify that this is the case. This requires, however, that the crate is built
# without overflow checks and debug assertions. Forcefully disable debug
# assertions and overflow checks here which should ensure that even if these
# assertions are enabled for libstd we won't enable them for compiler_builtins
# which should ensure we still link everything correctly.
overflow-checks = false

[dependencies]
ink_prelude = { version = "3.4.0", default-features = false }
ink_env = { version = "3.4.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"], optional = true }

# Note that versions <0.19.4 are broken because they do not include the "jsonrpc": "2.0" field in the request
# (fixed at https://github.com/Phala-Network/pink-web3/commit/f02c05cea5524fe21fce64d1431479e5f234d738)
pink-web3 = { version = "0.19.4", default-features = false, features = ["pink", "signing"] }

ss58-registry = { version = "1.37.0", default-features = false }
hex-literal = "0.3.4"

# XCM
xcm = { version = "0.9.29", git = "https://github.com/paritytech/polkadot.git", tag = "v0.9.29", default-features = false }

privadex_common = { path = "../common", default-features = false }

[lib]
name = "privadex_chain_metadata"
path = "src/lib.rs"
crate-type = [
	"lib",
]

[features]
default = ["std"]
std = [
    "ink_env/std",
    "scale/std",
    "scale-info/std",
    "pink-web3/std",
    "privadex_common/std",
]
ink-as-dependency = []
