[package]
name = "privadex_executor"
version = "0.1.0"
authors = ["Kap"]
edition = "2021"

[profile.release.package.compiler_builtins]
# The compiler-builtins crate cannot reference libcore, and it's own CI will
# verify that this is the case. This requires, however, that the crate is built
# without overflow checks and debug assertions. Forcefully disable debug
# assertions and overflow checks here which should ensure that even if these
# assertions are enabled for libstd we won't enable them for compiler_builtins
# which should ensure we still link everything correctly.
overflow-checks = false

[dependencies]
ink_prelude = { version = "3.3.0", default-features = false }
ink_primitives = { version = "3.3.0", default-features = false }
ink_metadata = { version = "3.3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.3.0", default-features = false }
ink_storage = { version = "3.3.0", default-features = false }
ink_lang = { version = "3.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush = { path = "../../vendor/openbrush-contracts", version = "~2.1.0", default-features = false }
pink-extension = { version = "0.1.18", default-features = false }
# Note that versions <0.19.4 are broken because they do not include the "jsonrpc": "2.0" field in the request
# (fixed at https://github.com/Phala-Network/pink-web3/commit/f02c05cea5524fe21fce64d1431479e5f234d738)
pink-web3 = { version = "0.19.4", default-features = false, features = ["pink", "signing"] }
pink-utils = { version = "0.1", default-features = false }

base58 = { version = "0.2.0" }
blake2-rfc = { version = "0.2.18", default-features = false }
serde-json-core = { version = "0.4.0", default-features = false }
serde = { version = "1.0.137", default-features = false, features = ["derive", "alloc"]}
ss58-registry = { version = "1.29.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.3.4"
ethereum-types = { version = "0.13.1", default-features = false, features = ["rlp"] }
rlp = { version = "0.5", default-features = false }

# Substrate dependencies 
# NOTE: The default clang on Mac fails to compile (with secp256k1 errors) when the 'full_crypto' feature is enabled.
# To avoid this, use the llvm clang and AR i.e. do `export CC=/usr/local/opt/llvm/bin/clang; export AR=/usr/local/opt/llvm/bin/llvm-ar`
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, features = ["full_crypto"]}
sp-core-hashing = { version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false}
# Need to specify this to avoid the error "not all trait items implemented, missing: `Pair`"
# (https://github.com/paritytech/substrate/issues/9032)
sp-application-crypto = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, features = ["full_crypto"]}
# Need to specify this to avoid the error "the `#[global_allocator]` in ink_allocator conflicts with global allocator in: sp_io"
# (https://substrate.stackexchange.com/questions/4733/error-when-compiling-a-contract-using-the-xcm-chain-extension)
sp-io = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] } 

# Used for s3_api specifically
sha2 = { version = "0.10.2", default-features = false }
hmac = { version = "0.12.1", default-features = false }
base16 = { version = "0.2.1", default-features = false, features = ["alloc"] }
chrono = { version = "=0.4.19", default-features = false, features = ["alloc"] }
aes-gcm-siv = { version = "0.11.1", default-features = false, features = ["aes", "alloc"] }
cipher = { version = "0.4.3", default-features = false }

# XCM
xcm = { version = "0.9.27", git = "https://github.com/paritytech/polkadot.git", tag = "v0.9.27", default-features = false }

[dev-dependencies]
environmental = { path = "../../utils/environmental", default-features = false }
pink-extension-runtime = "0.1.4"
# subxt = { git = "https://github.com/paritytech/subxt", tag = "v0.25.0" }

[lib]
name = "privadex_executor"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "openbrush/mockable",
    "openbrush/std",
    "scale/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "pink-extension/std",
    "pink-utils/std",
    "pink-web3/std",
    "serde-json-core/std",
]
ink-as-dependency = []
mockable = [
    "openbrush/mockable",
]
