[package]
name = "environmental"
description = "Set scope-limited values can can be accessed statically"
version = "1.1.3"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = []

[lib]
name = "environmental"
path = "src/lib.rs"
